feat: Improve Lighthous score to 100 everywhere

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -2,6 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="{{global.description}}" >
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Baldir - {{title}}</title>
 </head>
 <body>
