--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -5,6 +5,16 @@
     <meta name="description" content="{{global.description}}" >
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Baldir - {{title}}</title>
+    <style>
+        body{
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
 <header>
