feat: Code snippets with accessible syntax highlighting

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -2,19 +2,21 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="{{global.description}}" >
+    <meta name="description" content="{{global.description}}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Baldir - {{title}}</title>
     <style>
-        body{
+        body {
             max-width: 1200px;
             margin: 0 auto;
         }
+
         img {
             max-width: 100%;
             height: auto;
         }
     </style>
+    <link href="/public/css/a11y-light.min.css" rel="stylesheet"/>
 </head>
 <body>
 <header>
