--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -5,6 +5,7 @@
     <meta name="description" content="{{global.description}}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Baldir - {{title}}</title>
+    <link rel="alternate" href="/feed.xml" title="Baldir’s Posts Feed" type="application/rss+xml">
     <style>
         body {
             max-width: 1200px;
