feat: notes dans la navigation

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -64,6 +64,9 @@
                 <a href="/about">About</a>
             </li>
             <li>
+                <a href="/notes">Notes</a>
+            </li>
+            <li>
                 <a href="/making-of">Making of</a>
             </li>
         </ul>
