feat: traduction de la navigation en français

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -5,7 +5,7 @@
     <meta name="description" content="{{global.description}}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Baldir - {{title}}</title>
-    <link rel="alternate" href="/feed.xml" title="Baldir’s Posts Feed" type="application/rss+xml">
+    <link rel="alternate" href="/feed.xml" title="Baldir - Flux RSS des articles de blog" type="application/rss+xml">
     <style>
         body {
             max-width: 1200px;
@@ -52,16 +52,16 @@
 <body>
 <header>
     <div class="header-skip-content">
-        <a href="#skip-content">Skip to main content</a>
+        <a href="#skip-content">Contenu</a>
     </div>
     <div style="display: inline-block;width:5rem;padding-left: 6rem"><a href="/">Baldir</a></div>
     <nav style="display: inline-block;width: 20rem">
         <ul>
             <li>
-                <a href="/blog">Blog posts</a>
+                <a href="/blog">Articles de blog</a>
             </li>
             <li>
-                <a href="/about">About</a>
+                <a href="/about">À propos</a>
             </li>
             <li>
                 <a href="/notes">Notes</a>
