--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -8,8 +8,20 @@
     <link rel="alternate" href="/feed.xml" title="Baldir - Flux RSS des articles de blog" type="application/rss+xml">
     <style>
         body {
-            max-width: 1200px;
+            padding: 0.5rem;
+            max-width: 640px;
             margin: 0 auto;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+        }
+
+        blockquote {
+            margin-inline: 0px;
+            margin-block: 0;
+            padding-block: 0.125em;
+            font-size: 1.125rem;
+            font-style: italic;
+            border-left: 0.25rem solid lightgray;
+            padding-inline: 1em;
         }
 
         img {
@@ -46,6 +58,15 @@
             overflow: hidden;
         }
 
+        .bold {
+            font-weight: bold;
+        }
+
+        pre {
+            border-style: dashed;
+            border-width: medium;
+            border-color: lightgray;
+        }
     </style>
     <link href="/public/css/a11y-light.min.css" rel="stylesheet"/>
 </head>
