feat: mon nom et prénom dans l'entête

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -82,6 +82,7 @@
     </div>
     <div role="banner" >
         <h1 style="margin: .25rem .5rem;"><a href="/">Baldir</a></h1>
+        <span>Marc Bouvier</span>
     </div>
     <p style="font-size: small">{{global.description}}</p>
     <nav style="display: inline-block;" role="menu">
