navigation: renommage de `about` en `a-propos`

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -91,7 +91,7 @@
                 <a href="/blog" role="menuitem">Articles de blog</a>
             </li>
             <li>
-                <a href="/about" role="menuitem">À propos</a>
+                <a href="/a-propos" role="menuitem">À propos</a>
             </li>
             <li>
                 <a href="/notes" role="menuitem">Notes</a>
