--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -6,72 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baldir - {{title}}</title>
     <link rel="alternate" href="/feed.xml" title="Baldir - Flux RSS des articles de blog" type="application/rss+xml">
-    <style>
-        body {
-            padding: 0.5rem;
-            max-width: 640px;
-            margin: 0 auto;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-        }
-
-        blockquote {
-            margin-inline: 0px;
-            margin-block: 0;
-            padding-block: 0.125em;
-            font-size: 1.125rem;
-            font-style: italic;
-            border-left: 0.25rem solid lightgray;
-            padding-inline: 1em;
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-        }
-
-        nav ul {
-            display: flex;
-            justify-content: space-around;
-        }
-
-        nav ul li {
-            list-style: none;
-            padding: 0.375rem;
-        }
-
-        .header-skip-content {
-            position: absolute;
-            top: .125em;
-            left: .125em;
-            z-index: 1001;
-            text-align: center;
-            background-color: darkblue;
-            color: #f1f3f4;
-        }
-
-        .header-skip-content a:focus {
-            display: inline-block;
-            cursor: pointer;
-            padding: .5em;
-            color: #f1f3f4;
-        }
-
-        .header-skip-content a:not(:focus) {
-            clip: rect(0 0 0 0);
-            position: absolute;
-            overflow: hidden;
-        }
-
-        .bold {
-            font-weight: bold;
-        }
-
-        pre {
-            border-style: dashed;
-            border-width: medium;
-            border-color: lightgray;
-        }
-    </style>
     <link href="/public/css/a11y-light.min.css" rel="stylesheet"/>
     <link href="/public/css/style.css" rel="stylesheet"/>
 </head>
@@ -80,30 +14,28 @@
     <div class="header-skip-content">
         <a href="#skip-content">Contenu</a>
     </div>
-    <div role="banner" >
+    <div role="banner">
         <h1 style="margin: .25rem .5rem;"><a href="/">Baldir</a></h1>
         <span>Marc Bouvier</span>
     </div>
     <p style="font-size: small">{{global.description}}</p>
-    <nav style="display: inline-block;" role="menu">
-        <ul>
-            <li>
-                <a href="/blog" role="menuitem">Articles de blog</a>
-            </li>
-            <li>
-                <a href="/a-propos" role="menuitem">À propos</a>
-            </li>
-            <li>
-                <a href="/notes" role="menuitem">Notes</a>
-            </li>
-            <li>
-                <a href="/making-of" role="menuitem">Making of</a>
-            </li>
-        </ul>
+    <nav class="menu" role="menu">
+        <a href="/blog" role="menuitem">Articles de blog</a>
+        <a href="/a-propos" role="menuitem">À propos</a>
+        <a href="/notes" role="menuitem">Notes</a>
+        <a href="/glossaire" role="menuitem">Glossaire</a>
+        <a href="/making-of" role="menuitem">Making of</a>
     </nav>
 </header>
 <main id="skip-content">
     {{content}}
 </main>
+<footer>
+    <a class="modify-from-sources"
+       href="https://github.com/marc-bouvier/next.baldir.fr/blob/main/{{ page.inputPath }}"
+       target="_blank">
+        Modifier cette page sur GitHub
+    </a>
+</footer>
 </body>
 </html>
