--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,114 @@
-.cover_image{
+body {
+    padding: 0.5rem;
+    max-width: 640px;
+    margin: 0 auto;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+}
+
+a {
+    color: sienna;
+}
+
+blockquote {
+    margin-inline: 0px;
+    margin-block: 0;
+    padding-block: 0.125em;
+    font-size: 1.125rem;
+    font-style: italic;
+    border-left: 0.25rem solid lightgray;
+    padding-inline: 1em;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+nav ul {
+    display: flex;
+    justify-content: space-around;
+}
+
+nav ul li {
+    list-style: none;
+    padding: 0.375rem;
+}
+
+.header-skip-content {
+    position: absolute;
+    top: .125em;
+    left: .125em;
+    z-index: 1001;
+    text-align: center;
+    background-color: darkblue;
+    color: #f1f3f4;
+}
+
+.header-skip-content a:focus {
+    display: inline-block;
+    cursor: pointer;
+    padding: .5em;
+    color: #f1f3f4;
+}
+
+.header-skip-content a:not(:focus) {
+    clip: rect(0 0 0 0);
+    position: absolute;
+    overflow: hidden;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+pre {
+    border-style: dashed;
+    border-width: medium;
+    border-color: lightgray;
+}
+
+.cover_image {
     padding: 0 4rem;
 }
+
+.tags {
+    display: flex;
+    gap: .25rem;
+    list-style: none;
+    padding-inline-start: 0;
+}
+
+.tags a {
+    padding: .25rem .25rem;
+    font-size: xx-small;
+    font-weight: bold;
+    border-radius: 8px;
+    border: 1px solid;
+    border-color: orange;
+    background-color: papayawhip;
+    color: sienna;
+}
+
+.modify-from-sources {
+    font-size: small;
+}
+
+.menu {
+    display: flex;
+    justify-content: space-evenly;
+    gap: .5rem;
+    flex-wrap: wrap;
+}
+
+.card {
+    border: lightgray dashed;
+    padding: .5rem;
+    margin: .25rem 0
+}
+
+@media only screen and (min-width: 576px) {
+    .card {
+        width: 45%;
+    }
+}
+
