--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body {
-    padding: 0.5rem;
+    padding: 1rem;
     max-width: 640px;
     margin: 0 auto;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
@@ -112,3 +112,10 @@ pre {
     }
 }
 
+header {
+    margin-bottom: .5rem;
+}
+
+footer {
+    margin-top: .5rem;
+}
