feat: call to action : calendly

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -29,6 +29,9 @@
 </header>
 <main id="skip-content">
     {{content}}
+    <aside>
+        Tu veux en savoir plus ? Prenons <a href="https://calendly.com/baldir-fr">30 minutes pour en parler !</a>
+    </aside>
 </main>
 <footer>
     <a class="modify-from-sources"
