--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -24,6 +24,7 @@
         <a href="/a-propos" role="menuitem">À propos</a>
         <a href="/notes" role="menuitem">Notes</a>
         <a href="/glossaire" role="menuitem">Glossaire</a>
+        <a href="/citations" role="menuitem">Citations</a>
         <a href="/making-of" role="menuitem">Making of</a>
     </nav>
     <link href="/public/css/pagefind-baldir-fr-ui.css" rel="stylesheet">
@@ -38,15 +39,16 @@
 </header>
 <main id="skip-content">
     {{content}}
-    <aside>
-        Tu veux en savoir plus ? Prenons <a href="https://calendly.com/baldir-fr">30 minutes pour en parler !</a>
-    </aside>
 </main>
+<hr/>
+<aside>
+    Tu veux en savoir plus ? Prenons <a href="https://calendly.com/baldir-fr">30 minutes pour en parler !</a>
+</aside>
 <footer>
     <a class="modify-from-sources"
        href="https://github.com/marc-bouvier/next.baldir.fr/blob/main/{{ page.inputPath }}"
        target="_blank">
-        Modifier cette page sur GitHub
+        Voir cette page sur GitHub
     </a>
 </footer>
 </body>
