--- a/public/css/pagefind-baldir-fr-ui.css
+++ b/public/css/pagefind-baldir-fr-ui.css
@@ -385,17 +385,17 @@ legend {
 }
 
 :root {
-    --pagefind-ui-scale: .8;
+    --pagefind-ui-scale: .6;
     --pagefind-ui-primary: #393939;
     --pagefind-ui-text: #393939;
     --pagefind-ui-background: #ffffff;
     --pagefind-ui-border: #eeeeee;
     --pagefind-ui-tag: #eeeeee;
-    --pagefind-ui-border-width: 2px;
-    --pagefind-ui-border-radius: 8px;
-    --pagefind-ui-image-border-radius: 8px;
+    --pagefind-ui-border-width: 1px;
+    --pagefind-ui-border-radius: 0;
+    --pagefind-ui-image-border-radius: O;
     --pagefind-ui-image-box-ratio: 3 / 2;
-    --pagefind-ui-font: system, -apple-system, "BlinkMacSystemFont", ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", "Ubuntu", "arial", sans-serif
+    --pagefind-ui-font: system, -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
 }
 
 .pagefind-ui {
@@ -448,7 +448,6 @@ legend {
     display: flex;
     width: 100%;
     box-sizing: border-box;
-    font-weight: 700
 }
 
 .pagefind-ui__search-input::placeholder {
