--- a/blog.liquid
+++ b/blog.liquid
@@ -8,7 +8,7 @@ pagination:
     size: 6
     alias: blogs
 ---
-<h2>Articles de blog</h2>
+<h1>{{ title }}</h1>
 <div style="display: flex;
     flex-wrap: wrap;
     justify-content: space-between; margin-bottom: .5rem;margin-top: .5rem">
