fix: pas de retour à la ligne pour les étiquettes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -102,6 +102,7 @@ pre {
     border-color: orange;
     background-color: papayawhip;
     color: sienna;
+    text-wrap-mode: nowrap;
 }
 
 .modify-from-sources {
