--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,17 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
 }
 
+hr,.card,pre{
+    border-style: dashed;
+    border-width: medium;
+    border-color: lightgray;
+    border-radius: .5rem;
+}
+hr{
+
+    border-block-end: none;
+    margin: 2rem 0;
+}
 a {
     color: sienna;
 }
@@ -72,11 +83,6 @@ nav ul li {
     font-weight: bold;
 }
 
-pre {
-    border-style: dashed;
-    border-width: medium;
-    border-color: lightgray;
-}
 
 .cover_image {
     padding: 0 4rem;
@@ -98,6 +104,7 @@ pre {
     border-color: orange;
     background-color: papayawhip;
     color: sienna;
+    text-wrap-mode: nowrap;
 }
 
 .modify-from-sources {
@@ -112,7 +119,6 @@ pre {
 }
 
 .card {
-    border: lightgray dashed;
     padding: .5rem;
     margin: .25rem 0
 }
